--- a/JiaoBaoYun-hb/html/quan/tab-zone.html
+++ b/JiaoBaoYun-hb/html/quan/tab-zone.html
@@ -22,6 +22,8 @@
 		<!--侧滑-->
 		<script type="text/javascript" src="../../js/main/slide_navigation.js"></script>
 		<script>
+		var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
+
 		var datasource;
 		var model_homeSchoolList;
 		</script>
