修改因样式不一样而引发的bug

--- a/JiaoBaoYun-hb/html/register/register_phoneNumber.html
+++ b/JiaoBaoYun-hb/html/register/register_phoneNumber.html
@@ -53,7 +53,7 @@
 				var regFlag;
 				window.addEventListener('registerFlag', function(event) {
 					regFlag = event.detail.data;
-//					console.log('fa song yanzhengma1211 flag=' + regFlag);
+					console.log('验证码 flag=' + regFlag);
 				});
 //				console.log('fa song yanzhengma flag=' + regFlag);
 				events.preload('yanZhengMa.html');
