--- a/JiaoBaoYun-hb/html/mine/account-info.html
+++ b/JiaoBaoYun-hb/html/mine/account-info.html
@@ -98,6 +98,7 @@
 		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/utils/camera.js"></script>
 		<script type="text/javascript" src="../../js/publicProtocol.js" ></script>
+		<script src="../../js/utils/load.js"></script>
 		<script src="../../js/mine/account-info.js"></script>
 		
 	</body>
