--- a/JiaoBaoYun-hb/html/quan/classSpace-sub.html
+++ b/JiaoBaoYun-hb/html/quan/classSpace-sub.html
@@ -8,12 +8,7 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/bubble.css" rel="stylesheet"  />
 		<link href="../../css/quan/class_space.css" rel="stylesheet" />
-		<script src="../../js/mui.min.js"></script>
-		<script type="text/javascript">
-			mui.init()
-		</script>
-		<script src="../../js/utils/events.js"></script>
-		<script src="../../js/quan/class_space.js"></script>
+		
 	</head>
 
 	<body>
@@ -26,7 +21,13 @@
 		    </ul>
 		  </div>
 		</div>
-		
-		
+		<script src="../../js/mui.min.js"></script>
+		<!--<script type="text/javascript">
+			mui.init()
+		</script>-->
+		<script src="../../js/utils/events.js"></script>
+		<script src="../../js/storageKeyName.js"></script>
+		<script src="../../js/publicProtocol.js"></script>
+		<script src="../../js/quan/class_space.js"></script>
 	</body>
 </html>
