--- a/JiaoBaoYun-hb/html/quan/tab-zone.html
+++ b/JiaoBaoYun-hb/html/quan/tab-zone.html
@@ -24,8 +24,10 @@
 		<script>
 		var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
 
-		var datasource;
-		var model_homeSchoolList;
+		var datasource=[];
+		var topArray=[];
+		var requestTimes;
+		var requestTimes2;
 		</script>
 		<style type="text/css">/*自定义系统segmentcontrol控件*/
 
