--- a/JiaoBaoYun-hb/html/quan/class_space.html
+++ b/JiaoBaoYun-hb/html/quan/class_space.html
@@ -15,7 +15,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 class="mui-title">Everything is going well</h1>
+		    <h1 id="title" class="mui-title">群组名称</h1>
 		    <a id="write" class="mui-icon iconfont icon-xie1 mui-pull-right" ></a>
 		    <a id="group" class="mui-icon iconfont icon-renren  mui-pull-right"></a>
 		</header>
@@ -36,6 +36,8 @@
 				events.addTap('group',function(){
 					events.fireToPageWithData('class-group.html','postGroupInfo',data)
 				})
+				var className=plus.webview.currentWebview().className;
+				document.getElementById('title').innerText=className;
 //				var group=document.getElementById('group');
 //				events.jumpPage(group,'class-group.html');
 			})
