--- a/JiaoBaoYun-hb/html/quan/tab-zone.html
+++ b/JiaoBaoYun-hb/html/quan/tab-zone.html
@@ -21,7 +21,7 @@
 		<script type="text/javascript" src="../../js/main/slide_navigation.js"></script>
 		<script>
 		var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;//用户id
-		var datasource=[];//顶部列表数据
+		var datasource=[];//底部列表数据
 		var topArray=[];//顶部班级列表数据
 		var requestTimes;//记录班级空间请求次数--等于0时，请求完毕，刷新界面
 		var requestTimes2;//记录群用户列表请求次数--等于0时，请求完毕，刷新界面
