--- a/JiaoBaoYun-hb/html/clip/clip_sub.html
+++ b/JiaoBaoYun-hb/html/clip/clip_sub.html
@@ -151,13 +151,17 @@
 				//test
 				document.getElementById('testBtn').addEventListener('tap', function() {
 					console.log('testBtn');
-					var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
+//					var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
+					
+					var tempPage = 1;
 					var comData = {
-						userId: personalUTID //用户ID
+						userId: '1',//用户空间ID
+						pageIndex:(tempPage).toString(),//当前页数
+						pageSize:'10'//每页记录数
 					};
 					// 等待的对话框
 					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-					postData_jiaobaoYunPro_getNoReadNotesCntByUser(comData, wd, function(data) {
+					postDataPro_getUserSpaceMsgsById(comData,wd,function(data){
 						wd.close();
 						console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 						if(data.RspCode == 0) {
