--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -125,9 +125,9 @@
 				text-align: center;
 				background-color: rgba(0, 0, 0, 0.3);
 			}
-
+			
 			.mui-popover {
-								position: fixed;
+				position: fixed;
 				height: 45px;
 				width: 60px;
 			}
@@ -219,7 +219,7 @@
 		<!--下拉菜单-->
 		<div id="popover" class="mui-popover">
 			<ul class=" mui-table-view">
-				<li class="mui-table-view-cell"   style="text-align: center;">
+				<li class="mui-table-view-cell" style="text-align: center;">
 					删除
 				</li>
 				<li class="mui-table-view-cell" style="text-align: center;">
@@ -273,27 +273,29 @@
 		}
 		var id = 0;
 		mui.plusReady(function() {
-			//获取个人信息
-			//	var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
-			//	console.log(personalUTID)
-			////所需参数
-			//		var comData = {
-			//			userId: personalUTID,//用户ID
-			//			publisherId:'1',//发布用户ID
-			//			pageIndex:'0',//当前页数
-			//			pageSize:'10'//每页记录数
-			//		};
-			//	// 等待的对话框
-			//	var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-			//	postDataPro_getNoReadUserSpacesByUserForPublisher(comData, wd, function(data) {
-			//		wd.close();
-			//		console.log('postDataPro_PostGList:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-			//		if(data.RspCode == 0) {
-			//			
-			//		}else{
-			//			mui.toast(data.RspTxt);
-			//		}
-			//		});
+			//			获取个人信息
+			var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
+			console.log(personalUTID)
+				//所需参数
+			var comData = {
+				userId: personalUTID, //用户ID
+				publisherId: '1', //发布用户ID
+				noteType: '2', //信息类型,1云笔记,2个人空间动态
+				pageIndex: '1', //当前页数
+				pageSize: '10' //每页记录数
+			};
+			// 等待的对话框
+			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			//返回model：model_homeSchoolList,model_userNoteInfo
+			postDataPro_getUserSpacesByUserForPublisher(comData, wd, function(data) {
+				wd.close();
+				console.log('postDataPro_getNoReadUserSpacesByUserForPublisher:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+				if(data.RspCode == 0) {
+
+				} else {
+					mui.toast(data.RspTxt);
+				}
+			});
 
 			var table = document.body.querySelector('.mui-table-view');
 			var data = addData();
