--- a/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
+++ b/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
@@ -273,12 +273,14 @@
 						//gid	群ID	int		否
 						//gname	群名	string		否	群名称
 						//gimg	群头像	string		否	群头像的链接
+						//mstype	用户管理角色	int		否	0家长,1管理员,2老师,3学生
 						mui.each(data.RspData, function(index, item) {
 							console.log('data.RspData:' + item.gname);
 							var qun = {
 								gid: item.gid,
 								gname: item.gname,
-								gimg: item.gimg
+								gimg: item.gimg,
+								mstype:item.mstype
 							}
 							var hasGetMember = {
 								hasGetMem: false //记录是否已获得群成员
@@ -400,7 +402,7 @@
 							if(!item.hasGetMem) { //这个群没有获得成员
 								getMember(item.gid); //通过群ID获取群的正常用户
 							}
-							return;
+							return false;
 						}
 					});
 				});
@@ -409,23 +411,22 @@
 				mui('.mui-content').on('tap', '.mui-table-view-cell', function() {
 					console.log('mui-table-view-cell-id:' + this.getAttribute('id'));
 					console.log('mui-table-view-cell-utid:' + this.getAttribute('data-utid'));
+					console.log('mui-table-view-cell-gid:' + this.getAttribute('data-gid'));
 					var utid = this.getAttribute('data-utid');
 					var ugnick = this.getAttribute('data-ugnick');
-					//跳到点到记事
-					events.openNewWindowWithData('keeprecord_callorrecord_main.html', {
-						utid: utid,
-						ugnick: ugnick
+					var gid = this.getAttribute('data-gid');
+					mui.each(qunList, function(index, item) {
+						if(item.gid == gid) {
+							console.log('item:'+JSON.stringify(item));
+							if(item.mstype == '1' || item.mstype == '2') { //0家长,1管理员,2老师,3学生
+								//跳到点到记事
+								events.openNewWindowWithData('keeprecord_callorrecord_main.html', {
+									utid: utid,
+									ugnick: ugnick
+								});
+							}
+						}
 					});
-
-					//					var main = plus.webview.getWebviewById('keeprecord_callorrecord_sub.html');
-					//					setTimeout(function() {
-					//
-					//						mui.fire(main, "passData", {
-					//							utid: utid
-					//						});
-					//
-					//					}, 1000);
-
 				});
 
 				//监听添加成员按钮班级
@@ -549,19 +550,18 @@
 					} else {
 						div.style.display = "none";
 					}
-					div.innerHTML = '<div class="mui-scroll-wrapper" style="background: white;top: 95px;">\
-										<div class="mui-scroll">\
-											<ul class="mui-table-view">\
-												<div class="mui-row" style="margin-top: 8px;">\
-													<li id="addmember_' + qun.gid + '" class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3 ">\
-														<div class="keep-box-shadow-border keep-member2 addmember" data-id="' + qun.gid + '">\
-															<img src="../../image/cloud/record_add.png" style="height: 30px;width: 30px;margin-top: 18px;" />\
-														</div>\
-													</li>\
-												</div>\
-											</ul>\
-										</div>\
-									</div>';
+					var html1 = '<div class="mui-scroll-wrapper" style="background: white;top: 95px;">\
+									<div class="mui-scroll">\
+										<ul class="mui-table-view">\
+											<div class="mui-row" style="margin-top: 8px;">';
+					//添加学生
+					var html2 = '';
+					html2 = '<li id="addmember_' + qun.gid + '" class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3 ">\
+							   		<div class="keep-box-shadow-border keep-member2 addmember" data-id="' + qun.gid + '">\
+										<img src="../../image/cloud/record_add.png" style="height: 30px;width: 30px;margin-top: 18px;" />\
+									</div></li>';
+					var html3 = '</div></ul></div></div>';
+					div.innerHTML = html1 + html2 + html3;
 					document.body.querySelector('.mui-content').appendChild(div);
 				}
 
@@ -575,6 +575,7 @@
 					var li = document.createElement('li');
 					var memId = 'member_' + member.utid; //
 					li.id = memId;
+					li.setAttribute('data-gid', member.gid);
 					li.setAttribute('data-utid', member.utid);
 					li.setAttribute('data-ugnick', member.ugnick);
 					li.className = 'mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3';
