--- a/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_sub.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_sub.html
@@ -9,7 +9,86 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" href="../../css/mui.min.css">
 		<link rel="stylesheet" href="../../css/utils/common.css" />
+		<link rel="stylesheet" href="../../css/mui.picker.min.css" />
+		<link rel="stylesheet" href="../../css/iconfont/iconfont.css" />
+
 		<script src="../../js/mui.min.js"></script>
+		<script type="text/javascript" src="../../js/mui.picker.min.js"></script>
+		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
+
+		<style>
+			body,
+			.mui-content {
+				background: white;
+			}
+
+			.mui-table-view:before,
+			.mui-table-view:after,
+			.mui-table-view-cell:after {
+				height: 0px;
+			}
+
+			.mui-input-group:before,
+			.mui-input-group .mui-input-row:after,
+			.mui-input-group:after {
+				height: 0px;
+			}
+
+			.mui-checkbox input[type=checkbox]:checked:before,
+			.mui-radio input[type=radio]:checked:before {
+				color: #86BE49;
+			}
+
+			.mui-col-sm-4,
+			.mui-col-xs-8 {
+				height: 36px;
+			}
+
+			.mui-checkbox.mui-left input[type=checkbox],
+			.mui-radio.mui-left input[type=radio] {
+				left: 0px;
+			}
+
+			.mui-checkbox.mui-left label,
+			.mui-radio.mui-left label {
+				padding-left: 50%;
+				padding-right: 0px;
+			}
+
+			input[type=color],
+			input[type=date],
+			input[type=datetime-local],
+			input[type=datetime],
+			input[type=email],
+			input[type=month],
+			input[type=number],
+			input[type=password],
+			input[type=search],
+			input[type=tel],
+			input[type=text],
+			input[type=time],
+			input[type=url],
+			input[type=week],
+			select,
+			textarea {
+				margin-bottom: 0px;
+			}
+
+			.mui-checkbox input[type=checkbox]:before,
+			.mui-radio input[type=radio]:before {
+				/*font-size: 20px;*/
+			}
+
+			.call-type {
+				width: 20%;
+				float: left;
+			}
+
+			.mui-media-body {
+				background: #D8D8D8;
+				padding: 3px;
+			}
+		</style>
 	</head>
 
 	<body>
@@ -17,12 +96,77 @@
 		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
 				<!--数据列表-->
-				<ul class="mui-table-view mui-table-view-chevron">
-					点到记事
+				<ul class="mui-table-view" id="ul_table">
+					<div style="width: 100%;">
+						<div class="mui-row">
+							<!--<div class="mui-col-sm-4 mui-col-xs-4" style="padding-left: 5%;line-height: 36px;">
+								<span class="mui-icon iconfont icon-date" style="color: deepskyblue;margin-right: 10px;"></span>
+								<font style="margin-right: 10px;">时间</font>
+							</div>
+							<div class="mui-col-sm-8 mui-col-xs-8" style="line-height: 36px;">
+								<font id="time" style="color: #AAAAAA;">2016年11月18日11:31</font>
+							</div>-->
+							<div class="mui-col-sm-4 mui-col-xs-4" style="padding-left: 5%;line-height: 36px;">
+								<span class="mui-icon iconfont icon-xie" style="color: #86BE49;margin-right: 10px;"></span>
+								<font style="margin-right: 10px;">类型</font>
+							</div>
+							<div class="mui-col-sm-3 mui-col-xs-3" value="1">
+								<div class="mui-input-row mui-checkbox mui-left">
+									<label>点到</label>
+									<input id="cb_1" name="checkbox" type="checkbox" checked="true">
+								</div>
+							</div>
+							<div class="mui-col-sm-3 mui-col-xs-3" value="2">
+								<div class="mui-input-row mui-checkbox mui-left">
+									<label>记事</label>
+									<input id="cb_2" name="checkbox" type="checkbox">
+								</div>
+							</div>
+						</div>
+						<div id="call" style="display: inline;" value="0">
+							<div class="call-type" value="1">
+								<div class="mui-input-row mui-checkbox mui-left">
+									<label>正常</label>
+									<input id="cb_call1" name="checkbox" type="checkbox" checked>
+								</div>
+							</div>
+							<div class="call-type" value="2">
+								<div class="mui-input-row mui-checkbox mui-left">
+									<label>旷课</label>
+									<input id="cb_call2" name="checkbox" type="checkbox">
+								</div>
+							</div>
+							<div class="call-type" value="3">
+								<div class="mui-input-row mui-checkbox mui-left">
+									<label>迟到</label>
+									<input id="cb_call3" name="checkbox" type="checkbox">
+								</div>
+							</div>
+							<div class="call-type" value="4">
+								<div class="mui-input-row mui-checkbox mui-left">
+									<label>早退</label>
+									<input id="cb_call4" name="checkbox" type="checkbox">
+								</div>
+							</div>
+							<div class="call-type" value="5">
+								<div class="mui-input-row mui-checkbox mui-left">
+									<label>其他</label>
+									<input id="cb_call5" name="checkbox" type="checkbox">
+								</div>
+							</div>
+							<div class="mui-input-row" style="margin: 0px 5px;" style="">
+								<textarea id="textarea_call" rows="4" placeholder="点到："></textarea>
+							</div>
+						</div>
+						<div id="record" style="display: none;">
+							<div class="mui-input-row" style="margin: 0px 5px;">
+								<textarea id="textarea_record" rows="4" placeholder="记事："></textarea>
+							</div>
+						</div>
+					</div>
 				</ul>
 			</div>
 		</div>
-
 		<script>
 			mui.init({
 				pullRefresh: {
@@ -37,30 +181,227 @@
 			 */
 			function pulldownRefresh() {
 				setTimeout(function() {
-					var table = document.body.querySelector('.mui-table-view');
-					var cells = document.body.querySelectorAll('.mui-table-view-cell');
-					for(var i = cells.length, len = i + 3; i < len; i++) {
-						var li = document.createElement('li');
-						li.className = 'mui-table-view-cell';
-						li.innerHTML = '<a class="mui-navigate-right">Item ' + (i + 1) + '</a>';
-						//下拉刷新，新纪录插到最前面；
-						table.insertBefore(li, table.firstChild);
-					}
+					TotalPage++;
+					console.log('TotalPage:' + TotalPage);
+					getNotes(TotalPage, 10);
 					mui('#pullrefresh').pullRefresh().endPulldownToRefresh(); //refresh completed
 				}, 1500);
 			}
-
+			var TotalPage = 0; //总页数
+			var TotalCnt = 0; //总记录数
+			var data = null; //接收页面传入的参数值
+			var NotesList = null; //记录获取的数据
 			mui.plusReady(function() {
-				//				//获取成员utid
-				//				window.addEventListener("utid", function(e) {
-				//					//获得事件参数
-				//					var utid = e.detail.utid;
-				//					console.log('sub-utid:' + JSON.stringify(utid));
+				//				mui('.mui-scroll-wrapper').scroll({
+				//					scrollY: true, //是否竖向滚动
+				//					scrollX: false, //是否横向滚动
+				//					indicators: true, //是否显示滚动条
 				//				});
+				//---从父页面获取数据---start---
 				var main = plus.webview.currentWebview(); //获取当前窗体对象
-				var data = main.data; //接收页面传入的参数值
+				data = main.data; //接收页面传入的参数值
 				console.log('sub-utid:' + JSON.stringify(data));
+				//---从父页面获取数据---end---
+				//var time = document.getElementById("time"); //时间选择元素
+				//var myDate = new Date();
+				var ul_table = document.getElementById("ul_table");
+				var checkbox_1 = document.getElementById("cb_1"); //点到checkbox元素
+				var checkbox_2 = document.getElementById("cb_2"); //记事checkbox元素
+				var div_call = document.getElementById("call"); //点到区域
+				var div_record = document.getElementById("record"); //记事区域
+				var call_type = '1'; //记录最后点击的点到类型
+
+				//---获取数据---start---
+
+				getNotes(1, 10);
+				//---获取数据---end---
+				//---时间选择---start---
+				//time.innerText = myDate.getFullYear() + '年' + (myDate.getMonth() + 1) + '月' + myDate.getDate() + '日' + myDate.getHours() + ':' + myDate.getMinutes();
+				//选择时间的监听
+				//				time.addEventListener('tap', function() {
+				//					/*
+				//					 * 首次显示时实例化组件
+				//					 * 示例为了简洁，将 options 放在了按钮的 dom 上
+				//					 * 也可以直接通过代码声明 optinos 用于实例化 DtPicker
+				//					 */
+				//					var picker = new mui.DtPicker();
+				//					picker.show(function(rs) {
+				//
+				//						/*
+				//						 * rs.value 拼合后的 value
+				//						 * rs.text 拼合后的 text
+				//						 * rs.y 年，可以通过 rs.y.value 和 rs.y.text 获取值和文本
+				//						 * rs.m 月，用法同年
+				//						 * rs.d 日，用法同年
+				//						 * rs.h 时，用法同年
+				//						 * rs.i 分（minutes 的第二个字母），用法同年
+				//						 */
+				//						console.log('时间选择结果: ' + rs.text);
+				//						time.innerText = rs.y.text + '年' + rs.m.text + '月' + rs.d.text + '日' + rs.h.text + ':' + rs.i.text;
+				//
+				//						/*
+				//						 * 返回 false 可以阻止选择框的关闭
+				//						 * return false;
+				//						 */
+				//
+				//						/*
+				//						 * 释放组件资源，释放后将将不能再操作组件
+				//						 * 通常情况下，不需要示放组件，new DtPicker(options) 后，可以一直使用。
+				//						 * 当前示例，因为内容较多，如不进行资原释放，在某些设备上会较慢。
+				//						 * 所以每次用完便立即调用 dispose 进行释放，下次用时再创建新实例。
+				//						 */
+				//						picker.dispose();
+				//					});
+				//				});
+				//---时间选择---end---
+
+				//监听类型选择
+				mui('.mui-row').on('change', '.mui-col-sm-3', function() {
+					if(this.getAttribute('value') == 1) { //点击点到
+						checkbox_1.checked = true;
+						checkbox_2.checked = false;
+					} else { //点击记事
+						checkbox_1.checked = false;
+						checkbox_2.checked = true;
+					}
+					if(checkbox_1.checked) {
+						div_call.style.display = 'inline';
+						div_record.style.display = 'none';
+					} else {
+						div_call.style.display = 'none';
+						div_record.style.display = 'inline';
+					}
+					//console.log('checkbox_1:' + checkbox_1.checked + '|' + 'checkbox_2:' + checkbox_2.checked);
+				});
+
+				//点到类型切换监听
+				mui('#call').on('change', '.call-type', function() {
+					var value = this.getAttribute('value');
+					console.log('call-type:call_type:' + call_type); //上次选择的类型
+					console.log('call-type:value:' + value); //本次选择的类型
+					var checkBox = document.getElementById("cb_call" + value);
+					var checkBoxBefore = document.getElementById("cb_call" + call_type);
+					if(call_type == value) { //两次点击都是同一个checkbox
+						checkBox.checked = true;
+					} else {
+						checkBoxBefore.checked = false;
+						checkBox.checked = true;
+					}
+					call_type = value;
+				});
+
+				/**
+				 * 新增点到记事
+				 */
+				window.addEventListener("addNote", function() {
+					var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
+					var teacherId = personalUTID; //发布教师ID
+					var noteType = 1; //点到记事类型1点到2记事
+					var checkType = 1; //点到类型
+					var msgContent = ''; //记事内容
+					if(checkbox_1.checked) { //点到
+						noteType = 1;
+						checkType = call_type;
+						msgContent = document.getElementById("textarea_call").value;
+					} else { //记事
+						noteType = 2;
+						msgContent = document.getElementById("textarea_record").value;
+					}
+					if(msgContent.replace(/(^\s*)|(\s*$)/g, "") == "") { //为空不允许发送
+						mui.toast('请输入文字');
+					} else {
+						//8.（点到记事）新增某学生点到记事信息
+						//所需参数
+						var comData = {
+							studentId: data.utid, //用户ID----stuid
+							msgContent: msgContent, //记事内容
+							encType: '1', //附件类型,1图片2音视频
+							encAddr: '', //附件地址
+							encImg: '', //附件缩略图地址
+							teacherId: teacherId, //发布教师ID
+							noteType: noteType, //点到记事类型1点到2记事
+							checkType: checkType //点到类型,1 正常2 旷课3 迟到4 早退5 其他
+						};
+						console.log('addNote:' + JSON.stringify(comData));
+						// 等待的对话框
+						var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+						postDataPro_addNote(comData, wd, function(data) {
+							console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+							if(data.RspCode == 0) {
+								console.log('新增成功：' + JSON.stringify(data.RspData.Result));
+								mui.toast('发送成功');
+								mui.back();
+							} else {
+								mui.toast('新增点到记事信息:' + data.RspTxt);
+								console.log('新增点到记事信息:' + data.RspTxt);
+							}
+							wd.close();
+						});
+					}
+
+				});
+
 			});
+
+			/**
+			 * 获取用户针对某学生的点到记事列表
+			 * @param {Object} pageIndex 当前页数
+			 * @param {Object} pageSize 每页记录数
+			 */
+			function getNotes(pageIndex, pageSize) {
+				var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
+				var userId = personalUTID; //发布教师ID
+				//4.（点到记事）获取用户针对某学生的点到记事列表
+				//所需参数
+				var comData = {
+					userId: userId, //用户ID----utid
+					studentId: data.utid, //学生ID----stuid
+					pageIndex: pageIndex, //当前页数
+					pageSize: pageSize //每页记录数
+				};
+				//返回model：model_homeSchoolList,model_userNoteInfo
+				console.log('getNotes:' + JSON.stringify(comData));
+				// 等待的对话框
+				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+				postDataPro_getNotesByUserForStudent(comData, wd, function(data) {
+					console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+					if(data.RspCode == 0) {
+						if(NotesList == null) {
+							NotesList = data.RspData;
+							NotesList.Data == [];
+							TotalPage = data.RspData.TotalPage; //总页数
+							TotalCnt = data.RspData.TotalCnt; //总记录数
+						}
+						mui.each(data.RspData.Data, function(index, item) {
+							NotesList.Data.push(item);
+							console.log(index + '|' + JSON.stringify(item));
+							createNotes(item);
+						});
+						if(data.RspData.Data.length==0){
+							mui.toast('获取数据为空');
+						}
+						//mui('.mui-scroll-wrapper').scroll().scrollToBottom(100); //滚动到底部-----有BUG
+					} else {
+						mui.toast('获取点到记事列表:' + data.RspTxt);
+						console.log('获取用户针对某学生的点到记事列表:' + data.RspTxt);
+					}
+					wd.close();
+				});
+			}
+
+			/**
+			 * 界面中创建一条记录
+			 * @param {Object} data
+			 */
+			function createNotes(data) {
+				var li = document.createElement('li');
+				li.className = 'mui-table-view-cell';
+				li.innerHTML = '<div style="text-align: center;">\
+									<font style="background: #AAAAAA;border-radius: 5px;padding: 4px;">' + data.PublishDate + '</font>\
+									</div>\
+									<div style="margin-top: 10px;">' + data.MsgContent + '</div>';
+				ul_table.insertBefore(li, ul_table.firstChild);
+			}
 		</script>
 	</body>
 
